# pai

./: .gitignore  AIML.md  CLAUDE.md  DEPLOY.md  Dockerfile  Dockerfile.gpu  EXAMPLE.md  INTERVIEW_GUIDE.md  README.md  config.py  dependencies.py  docker-compose.local-llm.yml  docker-compose.yml  main.py  nginx-llm.conf  pyproject.toml
.github/workflows/: ci-cd.yml  terraform-deploy.yml
helm/: Chart.yaml  README.md
helm/templates/: _helpers.tpl  deployment.yaml  gateway.yml  inference-pool.yml  service.yml
k8s/: README.md  deployment.yml  secrets.yml
routers/: health.py  tasks.py
services/: __init__.py  ai_service.py  database.py  llm_service.py
terraform/: gke.tf  iam.tf  main.tf  network.tf  outputs.tf  variables.tf
tests/: conftest.py  test_health.py  test_models.py
